--- a/nodejs-typescript-ps/ormconfig.json
+++ b/nodejs-typescript-ps/ormconfig.json
@@ -4,7 +4,7 @@
   "port": 5432,
   "username": "postgres",
   "password": "123456789",
-  "database": "gostack_gobarber",
+  "database": "postgres",
   "entities":[
     "./src/models/*ts"
   ],
